target-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-fine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-fine
  template:
    metadata:
      labels:
        app: target-fine
        group: target
    spec:
      containers:
        - name: target-fine
          image: h2so40627/httpresponsetester
          ports:
            - containerPort: 80
          args:
            - "200"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-fail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-fail
  template:
    metadata:
      labels:
        app: target-fail
        group: target
    spec:
      containers:
        - name: target-fail
          image: h2so40627/httpresponsetester
          ports:
            - containerPort: 80
          args:
            - "500"
---
apiVersion: v1
kind: Service
metadata:
  name: ilb-fail
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
  labels:
    app: target-fail
spec:
  type: LoadBalancer
  selector:
    app: target-fail
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ilb-fine
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
  labels:
    app: target-fine
spec:
  type: LoadBalancer
  selector:
    app: target-fine
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
